=== release 0.3.1 ===

2007-01-05  Julien MOUTTE  <julien@moutte.net>

	* flumotion-windowsmedia.spec.in: Remove noarch from spec.

2006-11-10  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/muxers/asf/asf.py:
	  Update ASF muxer to use new muxer class, to avoid deadlockiness.

2006-09-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/encoders/wmv/wmv.py:
	* flumotion/component/encoders/wmv/wmv.xml:
	Add an option to specify the version number of wmv.  Value 2
	means use wmv2 (aka wmv8), anything else means use wmv3 
	(aka wmv9).

=== release 0.3.0 ===

2006-08-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* release 0.3.0

2006-08-30  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/muxers/asf/asf.py:
	* flumotion/component/muxers/asf/asf.xml: Add preroll-time
	property on the ASF muxer component.

2006-05-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  disable libtool, this is Python code

2006-05-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/Makefile.am:
	* flumotion/component/encoders/__init__.py:
	* flumotion/component/muxers/__init__.py:
	  commit some build files

2006-05-02  Julien MOUTTE  <julien@moutte.net>

	* COPYING: Fix licence.
	* flumotion-windowsmedia.spec.in: Fix licence.

2006-04-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* flumotion/component/asf/Makefile.am:
	* flumotion/component/asf/__init__.py:
	* flumotion/component/asf/asf.py:
	* flumotion/component/asf/asf.xml:
	* flumotion/component/muxers/Makefile.am:
	* flumotion/component/wma/Makefile.am:
	* flumotion/component/wma/__init__.py:
	* flumotion/component/wma/wma.py:
	* flumotion/component/wma/wma.xml:
	* flumotion/component/wmv/Makefile.am:
	* flumotion/component/wmv/__init__.py:
	* flumotion/component/wmv/wmv.py:
	* flumotion/component/wmv/wmv.xml:
	  first pass at moving directories around
